# EvenNumberChecker

./: CHANGELOG.md  EvenNumberChecker.cabal  LICENSE  README.md  flake.nix
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exe/: Main.hs
