cabal-version:      3.4
name:               EvenNumberChecker
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           abundantsolutions.dev
license:            ISC
license-file:       LICENSE
author:             nick childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable EvenNumberChecker
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   exe
    default-language: GHC2021
